; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_opt_narrow.c_lj_opt_narrow_unm.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_opt_narrow.c_lj_opt_narrow_unm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IR_STRTO = common dso_local global i32 0, align 4
@IRT_NUM = common dso_local global i32 0, align 4
@IR_SUBOV = common dso_local global i32 0, align 4
@IR_CONV = common dso_local global i32 0, align 4
@IRCONV_NUM_INT = common dso_local global i32 0, align 4
@IR_NEG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lj_opt_narrow_unm(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i64 @tref_isstr(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %3
  %12 = load i32, i32* @IR_STRTO, align 4
  %13 = load i32, i32* @IRT_NUM, align 4
  %14 = call i32 @IRTG(i32 %12, i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @emitir(i32 %14, i32 %15, i32 0)
  store i32 %16, i32* %6, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @strV(i32* %17)
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @lj_strscan_num(i32 %18, i32* %19)
  br label %21

21:                                               ; preds = %11, %3
  %22 = load i32, i32* %6, align 4
  %23 = call i64 @tref_isinteger(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %43

25:                                               ; preds = %21
  %26 = load i32*, i32** %7, align 8
  %27 = call i64 @numberVint(i32* %26)
  %28 = trunc i64 %27 to i32
  %29 = icmp ne i32 %28, -2147483648
  br i1 %29, label %30, label %37

30:                                               ; preds = %25
  %31 = load i32, i32* @IR_SUBOV, align 4
  %32 = call i32 @IRTGI(i32 %31)
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 @lj_ir_kint(i32* %33, i32 0)
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @emitir(i32 %32, i32 %34, i32 %35)
  store i32 %36, i32* %4, align 4
  br label %50

37:                                               ; preds = %25
  %38 = load i32, i32* @IR_CONV, align 4
  %39 = call i32 @IRTN(i32 %38)
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* @IRCONV_NUM_INT, align 4
  %42 = call i32 @emitir(i32 %39, i32 %40, i32 %41)
  store i32 %42, i32* %6, align 4
  br label %43

43:                                               ; preds = %37, %21
  %44 = load i32, i32* @IR_NEG, align 4
  %45 = call i32 @IRTN(i32 %44)
  %46 = load i32, i32* %6, align 4
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @lj_ir_knum_neg(i32* %47)
  %49 = call i32 @emitir(i32 %45, i32 %46, i32 %48)
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %43, %30
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i64 @tref_isstr(i32) #1

declare dso_local i32 @emitir(i32, i32, i32) #1

declare dso_local i32 @IRTG(i32, i32) #1

declare dso_local i32 @lj_strscan_num(i32, i32*) #1

declare dso_local i32 @strV(i32*) #1

declare dso_local i64 @tref_isinteger(i32) #1

declare dso_local i64 @numberVint(i32*) #1

declare dso_local i32 @IRTGI(i32) #1

declare dso_local i32 @lj_ir_kint(i32*, i32) #1

declare dso_local i32 @IRTN(i32) #1

declare dso_local i32 @lj_ir_knum_neg(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
